syntax = "proto3";

package entpb;

import "entpb/entpb.proto";


import "google/protobuf/wrappers.proto";

option go_package = "github.com/abisalde/gprc-microservice/catalog/pkg/ent/proto/entpb";


service CatalogExtendedService {
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
}


message GetProductsRequest {
  int64 page_size = 1;

  string page_token = 2;

  google.protobuf.StringValue query = 3;
  
  View view = 4;
  
  repeated string ids = 5;


  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message GetProductsResponse {
  repeated entpb.Catalog products = 1;

  string next_page_token = 2;

  int64 total_count = 3;
}