// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package entpb;

import "google/protobuf/empty.proto";

import "google/protobuf/wrappers.proto";

option go_package = "github.com/abisalde/gprc-microservice/catalog/pkg/ent/proto/entpb";

message Catalog {
  int64 id = 1;

  string name = 2;

  google.protobuf.StringValue description = 3;

  double price = 4;
}

message CreateCatalogRequest {
  Catalog catalog = 1;
}

message GetCatalogRequest {
  int64 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateCatalogRequest {
  Catalog catalog = 1;
}

message DeleteCatalogRequest {
  int64 id = 1;
}

message ListCatalogRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListCatalogResponse {
  repeated Catalog catalog_list = 1;

  string next_page_token = 2;
}

message BatchCreateCatalogsRequest {
  repeated CreateCatalogRequest requests = 1;
}

message BatchCreateCatalogsResponse {
  repeated Catalog catalogs = 1;
}

service CatalogService {
  rpc Create ( CreateCatalogRequest ) returns ( Catalog );

  rpc Get ( GetCatalogRequest ) returns ( Catalog );

  rpc Update ( UpdateCatalogRequest ) returns ( Catalog );

  rpc Delete ( DeleteCatalogRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListCatalogRequest ) returns ( ListCatalogResponse );

  rpc BatchCreate ( BatchCreateCatalogsRequest ) returns ( BatchCreateCatalogsResponse );
}
